trunk/Archive2/60/50b54d92e88270/output
main.cpp: In function ‘int main()’:
main.cpp:6:62: error: overflow in constant expression [-fpermissive]
          constexpr int x = std::numeric_limits<int>::max() + 1 ;
                                                              ^
main.cpp:6:24: warning: unused variable ‘x’ [-Wunused-variable]
          constexpr int x = std::numeric_limits<int>::max() + 1 ;
                        ^
